<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/roll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/hello_to_diceroller"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/sshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/sshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColorHint="@color/black"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/sshape"
        android:backgroundTint="#55342A"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/sign_in_with_social_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <LinearLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/twitter"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@drawable/twitter"
             />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facebook"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@drawable/face"
            android:layout_marginStart="40dp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/email"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@drawable/google"
            android:layout_marginStart="40dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />


</androidx.constraintlayout.widget.ConstraintLayout>